Wrapping up #89 - Fixing social links on blog post

--- a/assets/css/yeoman.css
+++ b/assets/css/yeoman.css
@@ -327,6 +327,11 @@ pre{
   top: 0;
 }
 
+.social {
+  width: 100%;
+  overflow: hidden;
+}
+
 [class^="icon-"],
 [class*=" icon-"] {
   display: inline-block;
